--- a/css/style.css
+++ b/css/style.css
@@ -8245,16 +8245,22 @@ h1, h2, h3, h4, h5,
         color: #fff; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav {
-         text-align: right;
+    float: none;           /* Remove float */
+    display: flex !important;  /* Force flexbox */
+    flex-direction: row !important; /* horizontal layout */
+    justify-content: start;  /* align right */
+    flex-wrap: nowrap;       /* no wrapping */
+    gap: 1rem;   
+    text-align: right;
     padding-bottom: 20px;
-    margin-right: 0; } }
+     flex-wrap: wrap; 
+    } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 16px;
+     font-size: 16px; 
     padding-top: .7rem;
-      padding-right: 1rem;
-    padding-bottom: 1rem;
+    padding-left: 8px;
+    padding-right: 8px;
     padding-left: 20px;
-   
     color: #fff;
     font-weight: 400;
     opacity: 1 !important; }
